# dvx

./: .gitignore  Dvx.cabal  Dvx.hs  LICENSE  Main.hs  README.md  Std.hs  Utils.hs  dvx.hs  gendocs.sh  index.html  prettyplz.awk  runtest.sh  runteststatus.sh  test.dvx
Dvx/: Interpreter.hs  Parser.hs  Romans.hs  Tokens.hs  Utils.hs
docs/: Dvx-Interpreter.html  Dvx-Parser.html  Dvx-Romans.html  Dvx-Tokens.html  Dvx-Utils.html  Main.html  Std.html  doc-index.html  index-frames.html  index.html  main.txt  mini_Dvx-Interpreter.html  mini_Dvx-Parser.html  mini_Dvx-Romans.html  mini_Dvx-Tokens.html  mini_Dvx-Utils.html  mini_Main.html  mini_Std.html
extra/vim/ftdetect/: dvx.vim
extra/vim/syntax/: dvx.vim
tests/: arith.dvx  cmp.dvx  hello.dvx  if.dvx  if2.dvx  ignore.dvx  mulstr.dvx  nested.dvx  noargs.dvx  read.dvx  recursive.dvx  short.dvx  test.dvx  test2.dvx  testdtor.hs
